--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "standard",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:pa11y": "./node_modules/.bin/pa11y-ci"
   },
   "author": "Amy Benson <amy@humanitarianresponse.info>",
   "license": "Apache 2",
@@ -33,6 +34,7 @@
     "enzyme": "^2.9.1",
     "fetch-mock": "^5.12.1",
     "jest": "^20.0.4",
+    "pa11y-ci": "^1.2.0",
     "react-test-renderer": "^15.6.1",
     "standard": "^10.0.2"
   }
